--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,25 @@
-# Production Environment Variables
-# Copy this to .env on your server and update the values
+# Environment Configuration
+# Copy this file to .env and update values
 
-DB_PASSWORD=your-secure-database-password
-SECRET_KEY=your-very-long-random-secret-key
+# Application
+FLASK_ENV=development
+FLASK_DEBUG=1
+SECRET_KEY=your-secret-key-change-in-production
+
+# Server
+HOST=0.0.0.0
+PORT=5000
+
+# Database
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/faker_db
+TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/faker_test
+
+DB_NAME=faker_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+
+# API Settings
+DEFAULT_BATCH_SIZE=10
+MAX_BATCH_SIZE=100
