--- a/.env.production
+++ b/.env.production
@@ -1,25 +1,13 @@
-# Environment Configuration
-# Copy this file to .env and update values
+# Production Environment Configuration
+# Copy this file to .env on your server: cp .env.production .env
+# Then update the values below with your credentials
+
+# Database (used by docker-compose.yml)
+DB_PASSWORD=your_secure_password_here
+DB_USER=faker_user
+DB_NAME=faker_db
 
 # Application
-FLASK_ENV=development
-FLASK_DEBUG=1
-SECRET_KEY=your-secret-key-change-in-production
-
-# Server
-HOST=0.0.0.0
-PORT=5000
-
-# Database
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/faker_db
-TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/faker_test
-
-DB_NAME=faker_db
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=5432
-
-# API Settings
-DEFAULT_BATCH_SIZE=10
-MAX_BATCH_SIZE=100
+SECRET_KEY=your_very_long_random_secret_key_here
+FLASK_ENV=production
+FLASK_DEBUG=0
